link references updated

--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -49,28 +49,28 @@
      <ul>
        <li>
          <picture class="gallerygrid">
-           <img src="images/wplaceholder.jpg" data-src="images/wgallery.jpg" alt="blossoms on a tree">
+           <img src="images/wplaceholder.jpg" data-src="images/wgallery.jpg" alt="blossoms on a tree in Spring">
          </picture>
          <p>Can you feel it? It's springtime! The blossoms are here!</p>
        </li>
 
        <li>
         <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images/wgallery3.jpg" alt="green fields">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery3.jpg" alt="green fields during the Spring">
         </picture>
         <p>We are loving the beautiful pictures coming in of our valley in full Spring!</p>
       </li>
 
       <li>
         <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="mountains, and a small body of water">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="mountains, and a small body of water and a reflection from the mountains is shown in the water. Possibly spring or summer time.">
         </picture>
         <p>Don't you love that reflection in the water! Summer is absolutely beautiful here in Preston, and we hope those fluffy clouds turn to rain.</p>
       </li>
 
       <li>
         <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images\wgallery5.jpg" alt="dark sky filled with clouds hovering over houses">
+          <img src="images/wplaceholder.jpg" data-src="images\wgallery5.jpg" alt="dark sky filled with clouds hovering over houses as if a rain storm is looming">
         </picture>
         <p>Do you see what we see? We have some wonderful clouds rolling in, now all we need is the rain!</p>
       </li>
