--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
-    <script defer src="js/footerdates.js"></script>
+    <script defer src="js/dates.js"></script>
     <script defer src="js/hamburger.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,11 +31,11 @@
         <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="primaryNav" class="hide">
           <li><a href="#">Home</a></li>
-          <li><a href="https://mikennaa.github.io/wdd230/lesson6/preston-6.html">Preston</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson11/preston.html">Preston</a></li>
           <li><a href="#">Soda Springs</a></li>
           <li><a href="#">Fish Haven</a></li>
-          <li class="activebutton"><a href="stormcenter.html">Storm Center</a></li>
-          <li><a href="gallery-7.html">Gallery</a></li>
+          <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/lesson11/stormcenter.html">Storm Center</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson11/gallery.html">Gallery</a></li>
         </ul>
       </nav>
 
