--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -32,8 +32,8 @@
         <ul id="primaryNav" class="hide">
           <li><a href="#">Home</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/preston.html">Preston</a></li>
-          <li><a href="#">Soda Springs</a></li>
-          <li><a href="#">Fish Haven</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson11/fishhaven.html">Fish Haven</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson11/sodasprings.html">Soda Springs</a></li>
           <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/lesson11/stormcenter.html">Storm Center</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/gallery.html">Gallery</a></li>
         </ul>
