--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -39,9 +39,9 @@
         <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="primaryNav" class="hide">
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/home.html">Home</a></li>
-          <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/lesson11/preston.html">Preston</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson11/preston.html">Preston</a></li>
+          <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/lesson11/sodasprings.html">Soda Springs</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/fishhaven.html">Fish Haven</a></li>
-          <li><a href="https://mikennaa.github.io/wdd230/lesson11/sodasprings.html">Soda Springs</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/stormcenter.html">Storm Center</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/gallery.html">Gallery</a></li>
         </ul>
@@ -49,7 +49,7 @@
 
 <main>
   <div class="maincontent">
-  <h2>Welcome To The City of Preston, Idaho</h2>
+  <h2>Welcome To The City of Soda Springs, Idaho</h2>
       <div class="herodiv">
         <picture class="prestontown">  
         <source srcset="images/herosmall.jpg" media="(max-width:399px)">
