--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -13,7 +13,7 @@
           <link rel="stylesheet" href="css/large.css">
           <script defer src="js/dates.js"></script>
           <script defer src="js/hamburger.js"></script>
-          <script defer src="js/openweather.js"></script>
+          <script defer src="js/openweathersoda.js"></script>
           <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&family=Poppins:wght@100;200;300;500;600;700;800;900&display=swap" rel="stylesheet">
