--- a/lesson11/thanks.html
+++ b/lesson11/thanks.html
@@ -30,7 +30,7 @@
       <nav class="clearfix">
         <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="primaryNav" class="hide">
-          <li><a href="#">Home</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson11/home.html">Home</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/preston.html">Preston</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/fishhaven.html">Fish Haven</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/sodasprings.html">Soda Springs</a></li>
