--- a/lesson11/preston.html
+++ b/lesson11/preston.html
@@ -59,7 +59,7 @@
         </picture>
         
 
-        <section class="summary">
+        <section class="wsummary">
           <h2>Weather Summary</h2>
           <div class="gridlayout">
             <span class="label">Currently:</span>
