--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -53,7 +53,7 @@
         </picture>
         
 
-        <section class="summary">
+        <section class="wsummary">
           <h2>Weather Summary</h2>
           <div class="gridlayout">
             <span class="label">Currently:</span>
