--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -86,21 +86,21 @@
         <picture class="gallerygrid">
           <img src="images/wplaceholder.jpg" data-src="images/wgallery2.jpg" alt="a field of sunflowers">
         </picture>
-        <p>You know it's getting to be the end of Summer when these beauties are in full bloom! Oh enjoy these blooming sunshines!</p>
+        <p>It's getting to be the end of Summer when these beauties are in full bloom! Oh enjoy these blooming sunshines!</p>
       </li>
 
       <li>
         <picture class="gallerygrid">
           <img src="images/wplaceholder.jpg" data-src="images/wgallery7.jpg" alt="person with an umbrella in the snow flurries">
         </picture>
-        <p>You know you live in Idaho when snow arrives in October! Grab your umbrellas, and winter coats, snow is here.</p>
+        <p>You live in Idaho when snow arrives in October! Grab your umbrellas, and winter coats, snow is here.</p>
       </li>
 
       <li>
         <picture class="gallerygrid">
           <img src="images/wplaceholder.jpg" data-src="images/wgallery8.jpg" alt="snowpacked pine trees">
         </picture>
-        <p>While we know it's cold outside, doesn't the sight of these snowcovered pines make you so happy! They are a piece of art!</p>
+        <p>It's cold outside, doesn't the sight of these snowcovered pines make you so happy! They are a piece of art!</p>
       </li>
 
       <li>
