--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -158,6 +158,7 @@ Preston, Idaho 83263</p>
 </section>
     <br>
     <br>
+    <footer>
     &copy; <span id="copyrightyear">2021</span> | Naturally Weather | Current Weather Provided by <a href="https://openweathermap.org/">OpenWeather</a> | Mikenna Atkinson
     <br> <span id="currentDate"></span>
 </footer>
