--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -33,9 +33,9 @@
         <button onclick="toggleMenu()">&#9776; Menu</button>
         <ul id="primaryNav" class="hide">
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/home.html">Home</a></li>
-          <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/lesson11/preston.html">Preston</a></li>
+          <li><a href="https://mikennaa.github.io/wdd230/lesson11/preston.html">Preston</a></li>
+          <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/lesson11/fishhaven.html">Fish Haven</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/sodasprings.html">Soda Springs</a></li>
-          <li><a href="https://mikennaa.github.io/wdd230/lesson11/fishhaven.html">Fish Haven</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/stormcenter.html">Storm Center</a></li>
           <li><a href="https://mikennaa.github.io/wdd230/lesson11/gallery.html">Gallery</a></li>
         </ul>
