--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -45,11 +45,11 @@
   <div class="maincontent">
   <h2>Welcome To The City of Soda Springs, Idaho</h2>
       <div class="herodiv">
-        <picture class="prestontown">  
-        <source srcset="images/herosmall.jpg" media="(max-width:399px)">
+        <picture class="sodatown">  
+        <source srcset="images/sodasprings.jpg" media="(max-width:399px)">
         <source srcset="images/heromedium.jpg" media="(max-width:799px)">
         <source srcset="images/herolarge.jpg" media="(min-width:899px)">
-        <img src="images/originalhero.jpeg" alt="City view of Soda Springs, Idaho" width="1100" height="500">
+        <img src="images/sodasprings.jpg" alt="City view of Soda Springs, Idaho" width="1100" height="500">
         </picture>
         
 
@@ -112,40 +112,30 @@
 </section>
 
 <section class="contentboxes">
-      <h2>Community News</h2>
+      <h2>Getting To Know Soda Springs</h2>
 <div class="tomatoes">
-      <img src="images/tomatoes.jpg" alt="A bowl full of tomatoes, it's harvest time" width="350" height="230">
+      <img src="images/sodasprings2.jpg" alt="A historic trail marker in Soda Springs, Idaho marking Camp Conner " width="350" height="230">
 </div>
+<div>
       <p>
-  Most people I talked to this week have picked the last of their tomato crop and had them in the pressure canner on the stove. The clouds gathered for a day, thundered and lightning, and rain dampened the sidewalks, roads, and grass. Afterward, a brilliantly colored rainbow arched over our neighborhood street.
-  <br><br>
-  Linda Meyers boxed up 163 crocheted and knitted items consisting of 122 hats, 29 scarfs, seven blankets, four sweaters, and one poncho, made by the Knit Wits, and sent to the Knit for Kids New World Vision program.
-  <br><br>
-  The Preston Aquatic Center swimming pool is open Monday, Wednesday and Friday at 8 a.m. They are starting a swim team Speedin’ Sea Turtles for ages 8-18. All are welcome to join the team and need to register at the pool, said Heidi Jensen.
-  <br><br>
-  Hirschi’s Haunted Hollow will be open on their first night, Friday, Oct. 15, a 7 p.m., to Saturday, Oct. 30, at 175 North 800 West in Preston. Regular entrance fee is $3, Trick-Or-Treater admission is $5.
-  <br><br>
-  The Legacy 2 Branch members at the Heritage Senior Living are grateful to have been able to meet with their residents since the end of September, reports Branch President Bart Wilcox. On Sunday, Sept. 26, Linda Lund, who has a brother living at Heritage, spoke about being of good cheer and persevering at a sacrament meeting before General Conference. On Sunday, Oct. 10, they held a Fast and Testimony meeting.
-  <br><br>
-  Jay Jensen, Branch President of the Legacy 3 Branch spoke in their church meeting on Sunday, Oct. 10, covering topics that President Russell M. Nelson talked about at General Conference. Nancy Jensen, Relief Society President, followed the talk with the Come Follow Me Lesson for Sunday School.
-</p>
-
+  Soda Springs is known for the Sulfur Springs, 'soda geyser,' the Oregon Trail Bear lake Scenic ByWay, and a Nation Pioneer Historic Byway. 
+</div>
     </section>
 </main>
 
 <footer>
   <section class="contactinfo">
     <div class="map">
-      <img class="sodaspringsMap" src="images/prestonmap.png" alt="Map of Soda Springs, Idaho" width="360" height="300">
+      <img class="sodaspringsMap" src="images/sodaspringsmap.png" alt="Map of Soda Springs, Idaho" width="360" height="300">
     </div>
 
     <h2>Contact Us</h2>
     <p>Address<br>
-70 West Oneida
-Preston, Idaho 83263</p>
-<p>Phone: (208)852-1817<br>
-  Fax: (208)852-1820 <br>
-  Email: welcome@prestonid.us
+9 West 2nd South
+Soda Springs, Idaho 83276</p>
+<p>Phone: (208)208-547-2600<br>
+  Fax: (208)547-2601 <br>
+  Email: welcome@sodaspringsid.us
 <br>
 <p>Click map for directions</p><br>
 
