--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -113,7 +113,7 @@
 
 <section class="contentboxes">
       <h2>Fun Facts</h2>
-      <div class="tomatoes">
+      <div class="fish">
         <img src="images/fishhaven1.jpg" alt="Lanscape image of a mountain side with green field grass near Fish Haven, Idaho" width="350" height="230">
   </div>
 
@@ -122,7 +122,10 @@
   • Fish Haven was originally named Rush Creek. <br>
   • Located along the shores of Bear Lake in Bear Lake Community.<br>
   • Established in 1864 and received it's first post office in 1867.<br>
-  • Bear lake is often called the Western paradise because of it's blue water, and sandy shores.<br>
+  • Bear lake is often called the Caribbean of the Rockies because of it's blue water, and sandy shores.<br>
+  • There are literally thousands of square miles of area to recreate from boating, fishing, hiking, snow skiing, ice fishing, exploring, etc. <br>
+  • Fish species of the area include Bonneville Cisco, Bear lake Whitefish, Bonneville Whitefish, and Bear Lake Sculpin. <br>
+  • Elevation, 5,923ft. <br>
       </p>
 </div>
     </section>
