--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -119,6 +119,17 @@
 <div>
       <p>
   Soda Springs is known for the Sulfur Springs, 'soda geyser,' the Oregon Trail Bear lake Scenic ByWay, and a Nation Pioneer Historic Byway. 
+  The natural springs in the area contain carbonated water, (many will bring bottles to gather their own carbonated water to drink) and are located throughout the town. Due to it constantly flooding the town of soda, 
+  the geyser was capped and now it is manually released every hour on the hour by a release valve. It has become quite the tourist attraction!
+  Soda Springs is the location of one of hte Ground Observer Corps sites. 
+<br>
+<br>
+  Another source of conversation is the Wagon Box Grave on the eastern side of Soda Springs. 
+  In the summer of 1861 a family of seven on their way to Oregon set up camp near the Soda Creek and the Bear River. Their horses had wandered a way and the family stayed behind the rest of the 
+  wagon train to find them. At some point they were all killed by Indians. Their bodies were found the next morning by a larger party passing through.
+  The deceased family was covered with quilts, and buried in their own wagon box. The grave is now marked and available to visit at teh Fairview Cemetery.
+      </p>
+
 </div>
     </section>
 </main>
