--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -48,8 +48,8 @@
         <picture class="fishtown">  
         <source srcset="images/herosmall.jpg" media="(max-width:399px)">
         <source srcset="images/heromedium.jpg" media="(max-width:799px)">
-        <source srcset="images/herolarge.jpg" media="(min-width:899px)">
-        <img src="images/originalhero.jpeg" alt="City view of Fish Haven, Idaho" width="1100" height="500">
+        <source srcset="images/fishhavenhero.jpg" media="(min-width:899px)">
+        <img src="images/fishhavenhero.jpg" alt="City view of Fish Haven, Idaho" width="1100" height="500">
         </picture>
         
 
