--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -48,8 +48,8 @@
         <picture class="fishtown">  
         <source srcset="images/herosmall.jpg" media="(max-width:399px)">
         <source srcset="images/heromedium.jpg" media="(max-width:799px)">
-        <source srcset="images/fishhavenhero.jpg" media="(min-width:899px)">
-        <img src="images/fishhavenhero.jpg" alt="City view of Fish Haven, Idaho" width="1100" height="500">
+        <source srcset="images/fishhavenhero1.jpg" media="(min-width:899px)">
+        <img src="images/fishhavenhero1.jpg" alt="Mountain view of Fish Haven, Idaho with wild green field grass" width="1100" height="500">
         </picture>
         
 
@@ -114,7 +114,7 @@
 <section class="contentboxes">
       <h2>Fun Facts</h2>
       <div class="fish">
-        <img src="images/fishhaven1.jpg" alt="Lanscape image of a mountain side with green field grass near Fish Haven, Idaho" width="350" height="230">
+        <img src="images/fishhavenhero.jpg" alt="Lanscape image of the Bear Lake near Fish Haven, Idaho" width="350" height="230">
   </div>
 
 <div>
