--- a/lesson11/sodasprings.html
+++ b/lesson11/sodasprings.html
@@ -49,7 +49,7 @@
         <source srcset="images/sodasprings.jpg" media="(max-width:399px)">
         <source srcset="images/heromedium.jpg" media="(max-width:799px)">
         <source srcset="images/sodasprings3.jpg" media="(min-width:899px)">
-        <img src="images/sodasprings3.jpg" alt="City view of Soda Springs, Idaho" width="1100" height="500">
+        <img src="images/sodasprings3.jpg" alt="Alexander Lake rock and the Bear River view in Soda Springs, Idaho" width="1100" height="500">
         </picture>
         
 
