--- a/lesson11/gallery.html
+++ b/lesson11/gallery.html
@@ -63,7 +63,7 @@
 
       <li>
         <picture class="gallerygrid">
-          <img src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="mountains, and a small body of water and a reflection from the mountains is shown in the water. Possibly spring or summer time.">
+          <img src="images/wplaceholder.jpg" data-src="images/wgallery4.jpg" alt="mountains, and a small body of water reflection of the mountains.">
         </picture>
         <p>Don't you love that reflection in the water! Summer is absolutely beautiful here in Preston, and we hope those fluffy clouds turn to rain.</p>
       </li>
