--- a/lesson11/fishhaven.html
+++ b/lesson11/fishhaven.html
@@ -113,7 +113,7 @@
 
 <section class="contentboxes">
       <h2>Fun Facts</h2>
-      <div class="fish">
+      <div class="tomatoes">
         <img src="images/fishhavenhero.jpg" alt="Lanscape image of the Bear Lake near Fish Haven, Idaho" width="350" height="230">
   </div>
 
