--- a/chamber/home.html
+++ b/chamber/home.html
@@ -19,5 +19,26 @@
     </head>
 
     <body>
+        <header>
+            <picture><img src="images/logo.png" alt="Grace Idaho chamber of commerce logo" width="150" height="110"></picture>
+            <section class="headerinfo">
+                <h1 class="siteheader"><a href=" ">GRACE IDAHO</a></h1><p class="sitedescription">CHAMBER OF COMMERCE</p></div>
+                <div class="socialicons">
+                    <a href="https://www.facebook.com/City-of-Grace-Idaho-Chamber-of-Commerce-451771845158097"><img src="" alt="Facebook icon"></a>
+                    <a href="https://www.instagram.com/"><img src="" alt="Instagram icon"></a>
+                    <a href="https://www.linkedIn.com/"><img src="" alt="LinkedIn icon"></a>
+                </div>
+            </section>
+        </header>
         
+        <nav class="clearfix">
+            <button onclick="toggleMenu()">&#9776; Menu</button>
+            <ul id="primaryNav" class="hide">
+                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/city.html">City</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/directory.html">Directory</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/contact.html">Contact</a></li>
+
+                    
 </html>
