--- a/chamber/home.html
+++ b/chamber/home.html
@@ -39,6 +39,38 @@
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/directory.html">Directory</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/contact.html">Contact</a></li>
+            </ul>
+            </nav>
 
+            <main>
+                <div class="homeHero">
+                    <picture class="homeHeroimg">
+                        <img src="" alt="">
+                        </picture>
+                        </div>
                     
+                        <div class="homeAbout">
+
+                            </div>
+
+                        <div class="homeSpotlight">
+
+                            </div>
+
+                            <div class="homeEvents">
+
+                                </div>
+
+                                <div class="homeWeather">
+
+                                    </div>
+
+                                    <div class="contactinfo">
+
+                                        </div>
+            </main>
+            <footer>
+                    <div class="footerinfo">
+                    </footer>
+    </body>
 </html>
