--- a/chamber/home.html
+++ b/chamber/home.html
@@ -20,13 +20,13 @@
 
     <body>
         <header>
-            <picture><img src="images/logo.png" alt="Grace Idaho chamber of commerce logo" width="150" height="110"></picture>
+            <picture><img src="images/chamberlogo.jpg" alt="Grace Idaho chamber of commerce logo" width="150" height="110"></picture>
             <section class="headerinfo">
-                <h1 class="siteheader"><a href=" ">GRACE IDAHO</a></h1><p class="sitedescription">CHAMBER OF COMMERCE</p></div>
+                <h1 class="siteheader"><a href="https://mikennaa.github.io/wdd230/chamber/home.html">GRACE IDAHO</a></h1><p class="sitedescription">CHAMBER OF COMMERCE</p></div>
                 <div class="socialicons">
-                    <a href="https://www.facebook.com/City-of-Grace-Idaho-Chamber-of-Commerce-451771845158097"><img src="" alt="Facebook icon"></a>
-                    <a href="https://www.instagram.com/"><img src="" alt="Instagram icon"></a>
-                    <a href="https://www.linkedIn.com/"><img src="" alt="LinkedIn icon"></a>
+                    <a href="https://www.facebook.com/City-of-Grace-Idaho-Chamber-of-Commerce-451771845158097"><img src="images/facebook32.png" alt="Facebook icon"></a>
+                    <a href="https://www.instagram.com/"><img src="images/instagram32.png" alt="Instagram icon"></a>
+                    <a href="https://www.linkedIn.com/"><img src="images/linkedin32.png" alt="LinkedIn icon"></a>
                 </div>
             </section>
         </header>
