--- a/chamber/home.html
+++ b/chamber/home.html
@@ -5,14 +5,14 @@
         <meta name="viewport content="width=device-width, initial-scale=1.0"/>
         <title>Grace Idaho Chamber of Commerce</title>
         <meta name="description" content="A site dedicated to providing up-to-date information about local businesses">
-        <link rel="shortcut icon" href="favicon.ico">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
-        <script defer src=
-        <script defer src=
-        <script defer src=
+        <script defer src= ></script>
+        <script defer src=></script>
+        <script defer src=></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
 
     <body>
         <header>
-            <picture><img src="images/chamberlogo.jpg" alt="Grace Idaho chamber of commerce logo" width="150" height="110"></picture>
+            <picture><img src="images/chamberlogo.jpg" alt="Grace Idaho chamber of commerce logo"></picture>
             <section class="headerinfo">
                 <h1 class="siteheader"><a href="https://mikennaa.github.io/wdd230/chamber/home.html">GRACE IDAHO</a></h1><p class="sitedescription">CHAMBER OF COMMERCE</p></div>
                 <div class="socialicons">
