--- a/chamber/home.html
+++ b/chamber/home.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
-        <script defer src= ></script>
-        <script defer src=></script>
+        <script defer src="js/dates.js"></script>
+        <script defer src="js/hamburger.js"></script>
         <script defer src=></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -77,6 +77,8 @@
             </main>
             <footer>
                     <div class="footerinfo">
+                        &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
+    <br> <span id="modified"></span>
                         </div>
                     </footer>
     </body>
