--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -10,9 +10,8 @@
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
-        <script defer src= ></script>
-        <script defer src=></script>
-        <script defer src=></script>
+        <script defer src="js/dates.js" ></script>
+        <script defer src="js/hamburger.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
@@ -34,9 +33,9 @@
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="primaryNav" class="hide">
-                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/city.html">City</a></li>
-                <li><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
+                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/directory.html">Directory</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/contact.html">Contact</a></li>
             </ul>
@@ -44,7 +43,7 @@
 
             <main>
                 <div class="thankyou">
-              <h2>Storm Report Has Been Submitted</h2>
+              <h2>Your request for membership has been submitted</h2>
               <h5>Thank you for your submission!</h5>
                   </div>
                 
@@ -56,7 +55,7 @@
                 <a href="https://www.instagram.com/"><img src="images/instagram32.png" alt="Instagram icon"></a>
                 <a href="https://www.linkedIn.com/"><img src="images/linkedin32.png" alt="LinkedIn icon"></a>
                 </div>
-                
+
             </main>
             <footer>
                     <div class="footerinfo">
