--- a/chamber/join.html
+++ b/chamber/join.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/large.css">
         <script defer src="js/dates.js"></script>
         <script defer src="js/hamburger.js"></script>
-        <script defer src=></script>
+        <script defer src="js/join.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;1,400&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
@@ -68,10 +68,10 @@
                 </p>
                 <label class="top">Membership Level <input list="member-type" name="member-type" required/>
                 <datalist id="member-type">
-                    <option value="Non-profit - $100"></option>
-                    <option value="Bronze - $200"></option>
-                    <option value="Silver - $400"></option>
-                    <option value="Gold - $1000"></option>
+                    <option value="Non-profit"></option>
+                    <option value="Bronze"></option>
+                    <option value="Silver"></option>
+                    <option value="Gold"></option>
                 </datalist></label>
                 </fieldset>
                 <div class="jbutton">
