--- a/chamber/join.html
+++ b/chamber/join.html
@@ -21,13 +21,6 @@
     <body>
         <header>
             <picture><img src="images/chamberlogo.jpg" alt="Grace Idaho chamber of commerce logo"></picture>
-            <section class="headerinfo">
-                <div class="socialicons">
-                    <a href="https://www.facebook.com/City-of-Grace-Idaho-Chamber-of-Commerce-451771845158097"><img src="images/facebook32.png" alt="Facebook icon"></a>
-                    <a href="https://www.instagram.com/"><img src="images/instagram32.png" alt="Instagram icon"></a>
-                    <a href="https://www.linkedIn.com/"><img src="images/linkedin32.png" alt="LinkedIn icon"></a>
-                </div>
-            </section>
         </header>
         
         <nav class="clearfix">
@@ -35,7 +28,7 @@
             <ul id="primaryNav" class="hide">
                 <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/city.html">City</a></li>
-                <li><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
+                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/directory.html">Directory</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/contact.html">Contact</a></li>
             </ul>
@@ -77,6 +70,12 @@
                 <div class="jbutton">
                 <input type="submit" value="Join" class="joinbutton"></div>
             </form>
+            
+            <div class="socialicons">
+                <a href="https://www.facebook.com/City-of-Grace-Idaho-Chamber-of-Commerce-451771845158097"><img src="images/facebook32.png" alt="Facebook icon"></a>
+                <a href="https://www.instagram.com/"><img src="images/instagram32.png" alt="Instagram icon"></a>
+                <a href="https://www.linkedIn.com/"><img src="images/linkedin32.png" alt="LinkedIn icon"></a>
+            </div>
             </main>
             <footer>
 
