--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -20,15 +20,19 @@
     <body>
         <header>
             <picture><img src="images/chamberlogo.jpg" alt="Grace Idaho chamber of commerce logo"></picture>
-            <section class="headerinfo">
-                <h1 class="siteheader"><a href="https://mikennaa.github.io/wdd230/chamber/home.html">GRACE IDAHO</a></h1><p class="sitedescription">CHAMBER OF COMMERCE</p></div>
-                <div class="socialicons">
-                    <a href="https://www.facebook.com/City-of-Grace-Idaho-Chamber-of-Commerce-451771845158097"><img src="images/facebook32.png" alt="Facebook icon"></a>
-                    <a href="https://www.instagram.com/"><img src="images/instagram32.png" alt="Instagram icon"></a>
-                    <a href="https://www.linkedIn.com/"><img src="images/linkedin32.png" alt="LinkedIn icon"></a>
-                </div>
-            </section>
         </header>
+        
+        <nav class="clearfix">
+            <button onclick="toggleMenu()">&#9776; Menu</button>
+            <ul id="primaryNav" class="hide">
+                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/city.html">City</a></li>
+                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/directory.html">Directory</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/contact.html">Contact</a></li>
+            </ul>
+            </nav>
+
         
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776; Menu</button>
