--- a/chamber/join.html
+++ b/chamber/join.html
@@ -26,7 +26,7 @@
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="primaryNav" class="hide">
-                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/city.html">City</a></li>
                 <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/directory.html">Directory</a></li>
@@ -39,7 +39,8 @@
 
     <h2>Become A Member</h2>
     <form method="get" action="thanks.html">
-        <div class="joinform">
+        <div class="memberform">
+            
             <fieldset>
                 <legend><h3>Contact Information</h3></legend>
                 <label class="top">First Name* <input type="text" name="fname" required pattern="[A-Za-z].{5,}"></label>
