--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -47,7 +47,7 @@
 
             <main>
                 <div class="thankyou">
-              <h2>Your request for membership has been submitted</h2>
+              <h2>Your request has been submitted</h2>
               <h5>Thank you for your submission!</h5>
                   </div>
                 
