--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -20,7 +20,7 @@
 
     <body>
         <header>
-            <picture><img src="images/chamberlogo.jpg" alt="Grace Idaho chamber of commerce logo"></picture>
+            <picture><img src="images/bkchamberlogo-01.png" alt="Grace Idaho chamber of commerce logo"></picture>
         </header>
         
         <nav class="clearfix">
