--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -37,7 +37,7 @@
 
 <main class="contactpage">
 
-    <h2> Contact Us</h2></h2C></h2>
+    <h2> Contact Us</h2>
     <form method="get" action="thanks.html">
         <div class="contactform">
             <fieldset>
@@ -50,6 +50,7 @@
                 <div class="sbutton">
                 <input type="submit" value="Send Message" class="sendbutton"></div>
             </form>
+        </div>
 
             
             <div class="socialicons">
@@ -62,7 +63,7 @@
 
                 <div class="footerinfo">
                     &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
-<br> <span id="modified"></span>
+<br> <span id="myFunction()"></span>
                     </div>
                 </footer>
 </body>
