--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -63,7 +63,7 @@
 
                 <div class="footerinfo">
                     &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
-<br> <span id="myFunction()"></span>
+<br> <div id="lastModified"></span>
                     </div>
                 </footer>
 </body>
