--- a/chamber/home.html
+++ b/chamber/home.html
@@ -70,7 +70,7 @@
             <footer>
                     <div class="footerinfo">
                         &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
-    <br> <span id="modified"></span>
+    <br> <div id="lastModified"></span>
                         </div>
                     </footer>
     </body>
