--- a/chamber/join.html
+++ b/chamber/join.html
@@ -82,7 +82,7 @@
 
                 <div class="footerinfo">
                     &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
-<br> <span id="modified"></span>
+<br> <div id="lastModified"></div>
                     </div>
                 </footer>
 </body>
