--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -62,8 +62,10 @@
 
             </main>
             <footer>
-                    <div class="footerinfo">
-                        </div>
+                <div class="footerinfo">
+                    &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
+<br> <div id="lastModified"></span>
+                    </div>
                     </footer>
     </body>
 </html>
