--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -28,10 +28,10 @@
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="primaryNav" class="hide">
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
-                <li><a href="https://mikennaa.github.io/wdd230/chamber/city.html">City</a></li>
-                <li><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/city.html">Grace City</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Become A Member</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/directory.html">Directory</a></li>
-                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/contact.html">Contact</a></li>
+                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/contact.html">Contact Us</a></li>
             </ul>
             </nav>
 
