update business spotlight

--- a/chamber/home.html
+++ b/chamber/home.html
@@ -41,23 +41,28 @@
                         </picture>
                         </div>
                     
-                        <div class="homeAbout">
-
+                    <div class="homeAbout">
+                        <p>The Grace Chamber of Commerce works closely with the Grace City Council, and the Grace Economic Development Corporation to promote the 
+                            economic growth. Grace boasts it's small town feel while supporting a variety of local business owners and their services. Our goal is to
+                            help businesses and residents alike come together to support one another.
+                        </p>
                             </div>
 
-                        <div class="homeSpotlight">
-
+                    <div class="homeSpotlight">
+                        <a href="https://www.facebook.com/3cGrill"><img src="images/chamber-4.jpg" alt="3C Grill logo"></a>
+                        <a href="https://www.facebook.com/VividArtsPrinting"><img src="images/vividart.jpg" alt="Vivid Art Printing logo"></a>
+                        <a href="https://www.google.com"><img src="images/chamber-2.jpg" alt="Professional Home & Landscape logo"></a>
                             </div>
 
-                            <div class="homeEvents">
+                    <div class="homeEvents">
 
                                 </div>
 
-                                <div class="homeWeather">
+                    <div class="homeWeather">
 
                                     </div>
 
-                                    <div class="contactinfo">
+                    <div class="contactinfo">
 
                                         </div>
             </main>
