--- a/chamber/home.html
+++ b/chamber/home.html
@@ -49,9 +49,9 @@
                             </div>
 
                     <div class="homeSpotlight">
-                        <a href="https://www.facebook.com/3cGrill"><img src="images/chamber-4.jpg" alt="3C Grill logo"></a>
-                        <a href="https://www.facebook.com/VividArtsPrinting"><img src="images/vividart.jpg" alt="Vivid Art Printing logo"></a>
-                        <a href="https://www.google.com"><img src="images/chamber-2.jpg" alt="Professional Home & Landscape logo"></a>
+                        <a href="https://www.facebook.com/3cGrill"><img src="" alt="3C Grill logo"></a>
+                        <a href="https://www.facebook.com/VividArtsPrinting"><img src="" alt="Vivid Art Printing logo"></a>
+                        <a href="https://www.google.com"><img src="" alt="Professional Home & Landscape logo"></a>
                             </div>
 
                     <div class="homeEvents">
