--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -25,7 +25,7 @@
         <nav class="clearfix">
             <button onclick="toggleMenu()">&#9776; Menu</button>
             <ul id="primaryNav" class="hide">
-                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
+                <li><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/city.html">Grace City</a></li>
                 <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Become A Member</a></li>
                 <li><a href="https://mikennaa.github.io/wdd230/chamber/directory.html">Directory</a></li>
@@ -33,22 +33,11 @@
             </ul>
             </nav>
 
-        
-        <nav class="clearfix">
-            <button onclick="toggleMenu()">&#9776; Menu</button>
-            <ul id="primaryNav" class="hide">
-                <li><a href="https://mikennaa.github.io/wdd230/chamber/home.html">Home</a></li>
-                <li><a href="https://mikennaa.github.io/wdd230/chamber/city.html">City</a></li>
-                <li class="activebutton"><a href="https://mikennaa.github.io/wdd230/chamber/join.html">Join</a></li>
-                <li><a href="https://mikennaa.github.io/wdd230/chamber/directory.html">Directory</a></li>
-                <li><a href="https://mikennaa.github.io/wdd230/chamber/contact.html">Contact</a></li>
-            </ul>
-            </nav>
-
             <main>
                 <div class="thankyou">
               <h2>Your request has been submitted</h2>
-              <h5>Thank you for your submission!</h5>
+              <h3>Thank you for your submission! <br>
+                  Please contact us if you have further questions.</h3>
                   </div>
                 
              <div class="contactinfo">
