--- a/chamber/join.html
+++ b/chamber/join.html
@@ -45,13 +45,13 @@
                 <legend><h3>Contact Information</h3></legend>
                 <label class="top">First Name* <input type="text" name="fname" required pattern="[A-Za-z].{5,}"></label>
                 <label class="top">Last Name* <input type="text" name="lname" required pattern="[A-Za-z].{5,}"></label>
-                <label class="top">Title <input type="text" name="title" required pattern="[A-Za-z].{5,}"></label>
+                <label class="top">Title <input type="text" name="title"></label>
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                 <label class="top">Phone <input type="tel" name="phone"></label>
                 <label class="top">Business Name* <input type="text" name="bname" required pattern="[A-Za-z].{5,}"></label>
-                <label class="top">Business Address <input type="number" name="baddress" required></label>
-                <label class="top">Business Website <input type="text" name="bwebsite" required pattern="[A-Za-z].{5,}"></label>
-                <label for="addInfo" class="top">Business Description<textarea name="addDesc" id="addDesc" cols="45" rows="10"></textarea></label>
+                <label class="top">Business Address <input type="text" name="baddress"></label>
+                <label class="top">Business Website <input type="text" name="bwebsite"></label>
+                <label for="addInfo" class="top">Business Description <textarea name="addDesc" id="addDesc" cols="45" rows="10"></textarea></label>
             </fieldset>
             <fieldset>
                 <legend><h3>Membership Level Selection</h3></legend>
@@ -69,7 +69,7 @@
                 </datalist></label>
                 </fieldset>
                 <div class="jbutton">
-                <input type="submit" value="Join" class="joinbutton"></div>
+                <input type="submit" value="Become A Member" class="joinbutton"></div>
             </form>
             
             </main>
