join page information

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -55,12 +55,12 @@
             </fieldset>
             <fieldset>
                 <legend><h3>Membership Level Selection</h3></legend>
-                <li> Non-profit $100 </li>
-                <li> Bronze $200 </li>
-                <li> Silver $400 </li>
-                <li> Gold $1000 </li>
+                <li><strong>Non-profit $100:</strong> Not for profit organizations. Member profile display in our online directory. Admittance to monthly meetings. </li><br>
+                <li><strong>Bronze $200:</strong> Business profile display in our directory. Early access  to Sponsorship opportunities. Business promotion on our social pages. Admittance to monthly meetings.</li><br>
+                <li><strong>Silver $400:</strong> All benefits of Bronze membership. Weekly ad promotion in local paper. </li><br>
+                <li><strong>Gold $1000:</strong> All benefits of Silver membership. Exclusive one-on-one meetings with Chamber President. Banner promotion during our 'Shop local' weekend. </li><br>
                 </p>
-                <label class="top">Membership Level <input list="member-type" name="member-type" required/>
+                <label class="top"><strong>Membership Level </strong><input list="member-type" name="member-type" required/>
                 <datalist id="member-type">
                     <option value="Non-profit"></option>
                     <option value="Bronze"></option>
