--- a/chamber/join.html
+++ b/chamber/join.html
@@ -57,8 +57,8 @@
                 <legend><h3>Membership Level Selection</h3></legend>
                 <li><strong>Non-profit $100:</strong> Not for profit organizations. Member profile display in our online directory. Admittance to monthly meetings. </li><br>
                 <li><strong>Bronze $200:</strong> Business profile display in our directory. Early access  to Sponsorship opportunities. Business promotion on our social pages. Admittance to monthly meetings.</li><br>
-                <li><strong>Silver $400:</strong> All benefits of Bronze membership. Weekly ad promotion in local paper. </li><br>
-                <li><strong>Gold $1000:</strong> All benefits of Silver membership. Exclusive one-on-one meetings with Chamber President. Banner promotion during our 'Shop local' weekend. </li><br>
+                <li><strong>Silver $400:</strong> All benefits of Bronze membership. Weekly ad promotion in local paper. Quarterly luncheon ticket. </li><br>
+                <li><strong>Gold $1000:</strong> All benefits of Silver membership. Exclusive one-on-one meetings with Chamber President. Banner promotion during our 'Shop local' weekend. Business training conference tickets.</li><br>
                 </p>
                 <label class="top"><strong>Membership Level </strong><input list="member-type" name="member-type" required/>
                 <datalist id="member-type">
