--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -46,11 +46,14 @@
                 <label class="top">Full Name* <input type="text" name="fname" required pattern="[A-Za-z].{5,}"></label>
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                 <label class="top">Phone <input type="tel" name="phone"></label>
-                <label for="addInfo" class="top">Message<textarea name="addDesc" id="addDesc" cols="45" rows="10"></textarea></label>
+                <label for="addInfo" class="top">Message  <textarea name="addDesc" id="addDesc" cols="45" rows="10"></textarea></label>
             </fieldset>
                 <div class="sbutton">
                 <input type="submit" value="Send Message" class="sendbutton"></div>
             </form>
+        </div>
+        <div class="contactmap">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2938.0042403075067!2d-111.73055348453687!3d42.5764324791729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8755a26bf20aea47%3A0xd93417a0e6a94fff!2sGrace%20City%20Hall!5e0!3m2!1sen!2sus!4v1639525345343!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
             </main>
             <footer>
