contact form information

--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -39,6 +39,10 @@
 <main class="contactpage">
 
     <h2> Contact Us</h2>
+    <p>Mailing Address: PO BOX 214 Grace, Idaho 83241<br>
+    Phone Number: (208) 425-3533<br>
+    Email: info@graceidaho.com </p>
+    
     <form method="get" action="thanks.html">
         <div class="contactform">
             <fieldset>
@@ -46,7 +50,7 @@
                 <label class="top">Full Name* <input type="text" name="fname" required pattern="[A-Za-z].{5,}"></label>
                 <label class="top">Email* <input type="email" name="email" placeholder="someone@gmail.com" required></label>
                 <label class="top">Phone <input type="tel" name="phone"></label>
-                <label for="addInfo" class="top">Message  <textarea name="addDesc" id="addDesc" cols="45" rows="10"></textarea></label>
+                <label for="addInfo" class="top">Message <br><textarea name="addDesc" id="addDesc" cols="45" rows="10"></textarea></label>
             </fieldset>
                 <div class="sbutton">
                 <input type="submit" value="Send Message" class="sendbutton"></div>
