--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -36,13 +36,15 @@
             </nav>
 
 
-<main class="contactpage">
+<main>
 
     <h2> Contact Us</h2>
+    <div class="contactpage">
+
     <p>Mailing Address: PO BOX 214 Grace, Idaho 83241<br>
     Phone Number: (208) 425-3533<br>
     Email: info@graceidaho.com </p>
-    
+
     <form method="get" action="thanks.html">
         <div class="contactform">
             <fieldset>
@@ -59,6 +61,7 @@
         <div class="contactmap">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2938.0042403075067!2d-111.73055348453687!3d42.5764324791729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8755a26bf20aea47%3A0xd93417a0e6a94fff!2sGrace%20City%20Hall!5e0!3m2!1sen!2sus!4v1639525345343!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
+    </div>
             </main>
             <footer>
                 <div class="footerinfo">
