--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -43,7 +43,17 @@
 
     <p>Mailing Address: PO BOX 214 Grace, Idaho 83241<br>
     Phone Number: (208) 425-3533<br>
-    Email: info@graceidaho.com </p>
+    Email: info@graceidaho.com>br>
+    City Hall Website: cityofgraceid.com </p>
+
+    <div class="board">
+        <h3>Grace Chamber Board</h3></h2>
+        <ul>
+            <li>President: </li>
+            <li>Board Member: </li>
+            <li>Secretary: </li>
+        </ul>
+    </div>
 
     <form method="get" action="thanks.html">
         <div class="contactform">
