--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -47,7 +47,7 @@
     City Hall Website: cityofgraceid.com </p>
 
     <div class="board">
-        <h3>Grace Chamber Board</h3></h2>
+        <h3>Grace Chamber Board of Directors</h3></h2>
         <ul>
             <li>President: </li>
             <li>Board Member: </li>
