--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -48,11 +48,12 @@
 
     <div class="board">
         <h3>Grace Chamber Board of Directors</h3></h2>
-        <ul>
-            <li>President: </li>
-            <li>Board Member: </li>
-            <li>Secretary: </li>
-        </ul>
+       <div class="boardmbrs">
+        <picture><img src="images/boardmbr1.jpg" alt="Male board member"></picture>
+        <picture><img src="images/boardmbr2.jpg" alt="Female board member"></picture>
+        <picture><img src="images/boardmbr4.jpg" alt="Male board member"></picture>
+        <picture><img src="images/boardmbr3.jpg" alt="Female board member"></picture>
+       </div>
     </div>
 
     <form method="get" action="thanks.html">
