--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -67,7 +67,7 @@
        
                     <div class="gallery">
             <h2>Grace Chamber Board Of Directors</h2>
-     <ul>
+     <ul class="board">
        <li>
          <picture class="bgallery">
            <img src="images/boardmbr1.jpg" alt="Male board member">
