--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -100,7 +100,7 @@
             </main>
             <footer>
                 <div class="footerinfo">
-                    &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
+                    &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Images Acquired from Unsplash | Mikenna Atkinson
 <br> <div id="lastModified"></span>
                     </div>
 
