--- a/chamber/contact.html
+++ b/chamber/contact.html
@@ -67,7 +67,7 @@
        
                     <div class="gallery">
             <h2>Grace Chamber Board Of Directors</h2>
-     <ul class="board">
+     <ul class="board" style="list-style-type:none;">
        <li>
          <picture class="bgallery">
            <img src="images/boardmbr1.jpg" alt="Male board member">
@@ -100,7 +100,7 @@
             </main>
             <footer>
                 <div class="footerinfo">
-                    &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Images Acquired from Unsplash | Mikenna Atkinson
+                    &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Images acquired from Unsplash | Mikenna Atkinson
 <br> <div id="lastModified"></span>
                     </div>
 
