div closing tag

--- a/chamber/thanks.html
+++ b/chamber/thanks.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/small.css">
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
-        <script defer src="js/dates.js" ></script>
+        <script defer src="js/dates.js"></script>
         <script defer src="js/hamburger.js"></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,13 +43,13 @@
             <footer>
                 <div class="footerinfo">
                     &copy; <span id="copyrightyear">2021</span> | Grace Idaho Chamber of Commerce |  Mikenna Atkinson
-<br> <div id="lastModified"></span>
+<br> <div id="lastModified">
                     </div>
-
                     <div class="socialicons">
                         <a href="https://www.facebook.com/City-of-Grace-Idaho-Chamber-of-Commerce-451771845158097"><img src="images/facebook32.png" alt="Facebook icon"></a>
                         <a href="https://www.instagram.com/"><img src="images/instagram32.png" alt="Instagram icon"></a>
                         <a href="https://www.linkedIn.com/"><img src="images/linkedin32.png" alt="LinkedIn icon"></a>
+                    </div>
                     </div>
                 </footer>
 </body>
